# na4zagin3.github.io

./: .gitignore  Makefile  README.md  about.html  about.rst  archive.html  build.sh  contact.html  contact.markdown  elm.min.js  greeknumeral.html  greeknumeral.js  greeknumeral.md  index.html  index.md  na4zagin3-page.cabal  numbers.md  pandoc.css  ref.bib  site.hs  stack.yaml
css/: default.css  pandoc.css
posts/: 2020-02-18-hakyll.html  2020-02-18-hakyll.markdown
templates/: default.html  post-list.html
